fix dark mode config

--- a/packages/storykit/.storybook/global.css
+++ b/packages/storykit/.storybook/global.css
@@ -4,10 +4,5 @@
 
 .sb-show-main,
 .sbdocs-preview {
-  @apply sk-bg-white;
-}
-
-:is(.dark) .sb-show-main,
-:is(.dark) .sbdocs-preview {
-  @apply sk-bg-gray-900;
+  @apply sk-bg-white dark:sk-bg-gray-900;
 }
